# defensive-identity-lab-vm

./: .gitattributes  .gitignore  .secrets.baseline  README.md  SUMMARY.md  labs.json  pyproject.toml
.github/workflows/: pages.yml  validate.yml
docs/: LIVE_LAB.md  PORTABLE_SETUP.md  RELEASE_CHECKLIST.md  VM_PLAN.md
scripts/: bootstrap-sibling-labs.ps1  install-live-lab-task.ps1  open-live-lab.ps1  run-all-labs.ps1  run-live-lab-task.ps1  start-live-lab.ps1  start-local-hub.ps1  stop-live-lab.ps1  uninstall-live-lab-task.ps1  update-live-lab.ps1  vm-evidence.ps1  vm-readiness.ps1
site/: index.html
src/identitylab/: __init__.py  cli.py  config.py  live.py  paths.py  site.py  verify.py  vm.py
tests/: test_cli.py  test_config.py  test_live.py  test_scripts_docs.py  test_site.py  test_verify.py  test_vm.py
