[project]
name = "defensive-identity-lab-vm"
version = "0.1.0"
description = "Public hub and future local VM plan for defensive identity detection labs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
identitylab = "identitylab.cli:main"

[project.optional-dependencies]
dev = [
    "detect-secrets>=1.5.0",
    "pip-audit>=2.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identitylab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
